--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "draftjs-to-html": "^0.9.1",
     "echarts-for-react": "^3.0.2",
     "file-saver": "^2.0.5",
+    "firebase": "^11.0.1",
     "form-linker": "1.2.0",
     "highcharts": "^11.3.0",
     "highcharts-react-official": "^3.2.1",
