--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-dropzone": "4.2.11",
     "react-export-table-to-excel": "^1.0.6",
     "react-highlight-words": "^0.20.0",
+    "react-hot-toast": "^2.4.1",
     "react-loading-components": "^1.1.12",
     "react-modal": "^3.16.1",
     "react-notifications": "^1.7.4",
@@ -86,6 +87,7 @@
     "react-tailwindcss-datepicker": "^1.6.0",
     "react-tooltip": "^5.25.0",
     "reactstrap": "^9.2.1",
+    "recoil": "^0.7.7",
     "redux-actions": "^3.0.0",
     "regenerator-runtime": "^0.13.9",
     "sheetjs-style": "^0.15.8",
