--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "styled-components": "^6.1.13",
     "theme-change": "^2.2.0",
     "use-onclickoutside": "^0.4.0",
+    "vercel": "^39.1.1",
     "web-ifc-viewer": "^1.0.218",
     "web-vitals": "^2.1.4"
   },
