--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "antd-table-saveas-excel": "^2.2.1",
     "apexcharts": "^3.44.2",
     "axios": "^1.6.2",
+    "blob-stream": "^0.1.3",
     "caniuse-lite": "^1.0.30001684",
     "capitalize-the-first-letter": "^1.0.8",
     "chart.js": "^4.0.1",
@@ -66,6 +67,7 @@
     "next": "^12.0.5",
     "off-color": "2.0.0",
     "papaparse": "^5.4.1",
+    "pdfkit": "^0.15.1",
     "primereact": "^10.2.1",
     "prismjs": "^1.25.0",
     "react": "^18.2.0",
